--- a/impulso-javascript/flexbox-parte-1/flex-wrap.html
+++ b/impulso-javascript/flexbox-parte-1/flex-wrap.html
@@ -43,7 +43,7 @@
         display: inline-block;
         padding: 50px;
         text-align: center;
-        min-width: 500px;
+        width: 400px;
         margin: 100px auto 50px auto;
       }
       .item {
@@ -56,6 +56,7 @@
         color: white;
       }
       .flex-container {
+        width: 300px;
         display: flex;
         margin: 0 auto;
         height: 150px;
