--- a/impulso-javascript/flexbox-parte-1/align-content.html
+++ b/impulso-javascript/flexbox-parte-1/align-content.html
@@ -8,7 +8,7 @@
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
       rel="stylesheet"
     />
-    <title>Align Content</title>
+    <title>align-content</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
