--- a/impulso-javascript/flexbox-parte-1/align-items.html
+++ b/impulso-javascript/flexbox-parte-1/align-items.html
@@ -8,7 +8,7 @@
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
       rel="stylesheet"
     />
-    <title>Align Items</title>
+    <title>align-items</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
