--- a/impulso-javascript/flexbox-parte-1/display-flex.html
+++ b/impulso-javascript/flexbox-parte-1/display-flex.html
@@ -8,7 +8,7 @@
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
       rel="stylesheet"
     />
-    <title>Display Flex</title>
+    <title>display-flex</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
