--- a/impulso-javascript/flexbox-parte-1/flex-flow.html
+++ b/impulso-javascript/flexbox-parte-1/flex-flow.html
@@ -8,7 +8,7 @@
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
       rel="stylesheet"
     />
-    <title>Flex Flow</title>
+    <title>flex-flow</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
