--- a/impulso-javascript/flexbox-parte-1/justify-content.html
+++ b/impulso-javascript/flexbox-parte-1/justify-content.html
@@ -8,7 +8,7 @@
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
       rel="stylesheet"
     />
-    <title>Justify Content</title>
+    <title>justify-content</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
