--- a/impulso-javascript/flexbox-parte-1/align-content.html
+++ b/impulso-javascript/flexbox-parte-1/align-content.html
@@ -8,7 +8,7 @@
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
       rel="stylesheet"
     />
-    <title>align-content</title>
+    <title>Align Content</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
@@ -22,6 +22,9 @@
       h1 {
         font-weight: 400;
         font-size: 25px;
+      }
+      .box > div > h1 {
+        margin-top: 40px;
       }
       .desc {
         max-width: max-content;
@@ -39,7 +42,7 @@
         border-radius: 10px;
         display: flex;
         flex-wrap: wrap;
-        padding: 50px;
+        padding: 0px 50px 50px 50px;
         justify-content: center;
         max-width: 400px;
         margin: 0px auto 50px auto;
@@ -51,7 +54,7 @@
         height: 450px;
         border: 2px solid black;
         max-width: 400px;
-        margin: 0 auto 40px auto;
+        margin: 0 auto;
       }
       .item {
         background-color: #9056ff;
