--- a/impulso-javascript/flexbox-parte-1/flex-wrap.html
+++ b/impulso-javascript/flexbox-parte-1/flex-wrap.html
@@ -16,35 +16,37 @@
         margin: 0;
         padding: 0;
       }
+      body {
+        display: block;
+      }
       h1 {
         font-weight: 400;
-        margin: 50px 0 0 0px;
         font-size: 25px;
       }
-      h1:first-child {
-        margin-top: 10px;
-      }
-      body {
-        display: flex;
-        justify-content: center;
+      .box > h1 {
+        margin-top: 40px;
       }
       .desc {
         max-width: max-content;
-        position: absolute;
+        display: flex;
         background-color: black;
         color: white;
         padding: 12px;
         border-radius: 10px 10px 0px 0px;
-        margin: 56px auto;
+        margin: 60px auto 0 auto;
+        text-align: center;
       }
       .box {
         border: 4px solid black;
+        flex-direction: column;
         border-radius: 10px;
-        display: inline-block;
-        padding: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0px 50px 50px 50px;
+        justify-content: center;
+        max-width: 400px;
+        margin: 0px auto 50px auto;
         text-align: center;
-        width: 400px;
-        margin: 100px auto 50px auto;
       }
       .item {
         display: flex;
