--- a/impulso-javascript/flexbox-parte-1/justify-content.html
+++ b/impulso-javascript/flexbox-parte-1/justify-content.html
@@ -16,16 +16,15 @@
         margin: 0;
         padding: 0;
       }
-      h1 {
-        font-weight: 400;
-        margin: 50px 0 0 0px;
-        font-size: 25px;
-      }
-      h1:first-child {
-        margin-top: 10px;
-      }
       body {
         display: block;
+      }
+      h1 {
+        font-weight: 400;
+        font-size: 25px;
+      }
+      .box > h1 {
+        margin-top: 40px;
       }
       .desc {
         max-width: max-content;
@@ -43,7 +42,7 @@
         border-radius: 10px;
         display: flex;
         flex-wrap: wrap;
-        padding: 50px;
+        padding: 0px 50px 50px 50px;
         justify-content: center;
         max-width: 400px;
         margin: 0px auto 50px auto;
