--- a/impulso-javascript/flexbox-parte-2/flex-grow.html
+++ b/impulso-javascript/flexbox-parte-2/flex-grow.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.bunny.net/css?family=ibm-plex-mono:400"
-      rel="stylesheet"
-    />
-    <title>display-flex</title>
+    <title>flex-grow</title>
     <style>
       * {
         font-family: "IBM Plex Mono";
@@ -18,6 +14,13 @@
       }
       body {
         display: block;
+      }
+      h1 {
+        font-weight: 400;
+        font-size: 25px;
+      }
+      .box > div > h1 {
+        margin-top: 40px;
       }
       .desc {
         max-width: max-content;
@@ -35,34 +38,19 @@
         border-radius: 10px;
         display: flex;
         flex-wrap: wrap;
-        padding: 50px;
+        padding: 0px 50px 50px 50px;
+        justify-content: center;
         max-width: 400px;
         margin: 0px auto 50px auto;
         text-align: center;
       }
-      .flex {
-        margin: 0 auto;
-        padding: 10px;
-        border: 2px solid black;
+      .container {
         display: flex;
-      }
-      .item {
-        background-color: aqua;
-        height: 100%;
-        max-width: 100%;
-        margin: 5px;
-        padding: 10px;
+        border: 2px solid black;
+        max-width: 300px;
+        margin: 0 auto;
       }
     </style>
   </head>
-  <body>
-    <div class="desc">Display Flex</div>
-    <div class="box">
-      <div class="flex">
-        <div class="item">Item 1</div>
-        <div class="item">Item 2</div>
-        <div class="item">Item 3</div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
