--- a/impulso-javascript/flexbox-parte-1/flex-direction.html
+++ b/impulso-javascript/flexbox-parte-1/flex-direction.html
@@ -84,7 +84,7 @@
     </style>
   </head>
   <body>
-    <div class="desc">Flex Direction</div>
+    <div class="desc">flex-direction</div>
     <div class="box">
       <h1></h1>
       <ul class="flex-container row">
