--- a/impulso-javascript/flexbox-parte-1/flex-flow.html
+++ b/impulso-javascript/flexbox-parte-1/flex-flow.html
@@ -87,7 +87,7 @@
     </style>
   </head>
   <body>
-    <div class="desc">Flex Flow</div>
+    <div class="desc">flex-flow</div>
     <div class="box">
       <h1>row nowrap</h1>
       <div class="flex-container default">
