--- a/impulso-javascript/flexbox-parte-1/flex-wrap.html
+++ b/impulso-javascript/flexbox-parte-1/flex-wrap.html
@@ -91,7 +91,7 @@
     </style>
   </head>
   <body>
-    <div class="desc">Flex Wrap</div>
+    <div class="desc">flex-wrap</div>
     <div class="box">
       <h1>nowrap</h1>
       <div class="flex-container nowrap">
