--- a/impulso-javascript/flexbox-parte-1/justify-content.html
+++ b/impulso-javascript/flexbox-parte-1/justify-content.html
@@ -86,7 +86,7 @@
   </head>
   <body>
     <div>
-      <div class="desc">Flex Flow<br />(row)</div>
+      <div class="desc">justify-content<br />(row)</div>
       <div class="box">
         <h1>flex-start</h1>
         <section class="flex-container flex-start">
@@ -125,7 +125,7 @@
       </div>
     </div>
     <div>
-      <div class="desc">Flex Flow<br />(column)</div>
+      <div class="desc">justify-content<br />(column)</div>
       <div class="box">
         <h1>flex-start</h1>
         <section class="flex-container-column flex-start column">
