--- a/impulso-javascript/flexbox-parte-1/align-items.html
+++ b/impulso-javascript/flexbox-parte-1/align-items.html
@@ -96,7 +96,7 @@
   </head>
   <body>
     <div>
-      <div class="desc">Align Items<br />(row)</div>
+      <div class="desc">align-items<br />(row)</div>
       <div class="box">
         <div>
           <h1>center</h1>
@@ -137,7 +137,7 @@
     </div>
 
     <div>
-      <div class="desc">Align Items<br />(column)</div>
+      <div class="desc">align-items<br />(column)</div>
       <div class="box">
         <div>
           <h1>center</h1>
