--- a/impulso-javascript/flexbox-parte-1/display-flex.html
+++ b/impulso-javascript/flexbox-parte-1/display-flex.html
@@ -56,7 +56,7 @@
     </style>
   </head>
   <body>
-    <div class="desc">Display Flex</div>
+    <div class="desc">display-flex</div>
     <div class="box">
       <div class="flex">
         <div class="item">Item 1</div>
