--- a/impulso-javascript/Desenvolvimento_Web_com_React/Criando_um_front-end_totalmente_componentizado_na_pratica_com_ReactJS/github-api/public/index.html
+++ b/impulso-javascript/Desenvolvimento_Web_com_React/Criando_um_front-end_totalmente_componentizado_na_pratica_com_ReactJS/github-api/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.bunny.net" />
     <link
-      href="https://fonts.bunny.net/css?family=fira-sans:100,100i,400,400i,600,600i|nunito:200,200i,400,400i,600,600i"
+      href="https://fonts.bunny.net/css?family=nunito:200,200i,400,400i,600,600i,800"
       rel="stylesheet"
     />
     <title>Github Interface</title>
