--- a/impulso-javascript/Criando_API_com_Node.Js/Integrando_um_Backend_em_Node.js_com_um_Frontend_em_React_para_um_E-commerce/dioshopping/public/index.html
+++ b/impulso-javascript/Criando_API_com_Node.Js/Integrando_um_Backend_em_Node.js_com_um_Frontend_em_React_para_um_E-commerce/dioshopping/public/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <title>PessaEssaPeça</title>
+    <title>Dio Shopping</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
